--- a/book_store/.env
+++ b/book_store/.env
@@ -2,9 +2,9 @@ SECRET_KEY=1234
 ALLOWED_HOSTS=['*']
 CORS_ORIGIN_WHITELIST=
 DB_NAME= 'Books'
-DB_USER= 'postgres'
+DB_USER= 'rimasjuz'
 DB_PASSWORD= 'asawesome2020'
-DB_HOST= 'localhost'
-DB_PORT= '5433'
+DB_HOST= 'database-1.c5b3lywmccow.eu-central-1.rds.amazonaws.com'
+DB_PORT= '5432'
 DEBUG=True
 CORS_ORIGIN_ALLOW_ALL = True
